--- a/.github/workflows/news_scraper.yml
+++ b/.github/workflows/news_scraper.yml
@@ -21,4 +21,4 @@ jobs:
         run: pip install beautifulsoup4 requests
 
       - name: Run script
-        run: python scraper.py
+        run: python scraper_v0.5.py
