--- a/.github/workflows/scraper_runner.yml
+++ b/.github/workflows/scraper_runner.yml
@@ -2,7 +2,7 @@ name: Scraper Runner
 
 on:
   schedule:
-    - cron: "0 9 * * *"  # 매일 오전 9시에 실행 (UTC 기준)
+    - cron: "0 9 */3 * *"  # 매일 오전 9시에 실행 (UTC 기준)
   workflow_dispatch:  # 수동 실행 가능
 
 jobs:
