--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -26,11 +26,13 @@ jobs:
       - name: 크롤링 실행
         run: |
           python news_crawler.py
-      
+
       - name: 변경 사항 커밋 및 푸시
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git add now_news.json
           git commit -m "🔄 자동 크롤링 업데이트: $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${GH_TOKEN}@github.com/ric-grown/news-bot.git HEAD:main
