--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -1,5 +1,8 @@
 name: Blog News Crawler
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "0 */3 * * *"  # 3시간마다 실행 (UTC 기준)
@@ -29,7 +32,7 @@ jobs:
 
       - name: 변경 사항 커밋 및 푸시
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
