--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -5,30 +5,30 @@ permissions:
 
 on:
   schedule:
-    - cron: "0 */3 * * *"  # 3시간마다 실행 (UTC 기준)
-  workflow_dispatch:  # 수동 실행도 가능하게 설정
+    - cron: '0 * * * *'  # 매시간 0분마다 실행 (예: 01:00, 02:00, 03:00 ...)
+
+  workflow_dispatch:  # 수동 실행 가능하도록 추가
 
 jobs:
-  crawl_and_update:
+  crawl:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: 저장소 체크아웃
+      - name: 저장소 체크아웃 (코드 가져오기)
         uses: actions/checkout@v4
-        
-      - name: Python 설정
+
+      - name: Python 설정 (Python 3.9)
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-      
-      - name: 필수 패키지 설치
-        run: |
-          pip install beautifulsoup4 requests notion-client selenium webdriver-manager openai
+          python-version: '3.9'
 
-      
-      - name: 크롤링 실행
+      - name: 필요한 패키지 설치
         run: |
-          python news_crawler.py
+          pip install -r requirements.txt
+
+      - name: 크롤러 실행
+        run: |
+          python main_crawler.py
 
       - name: 변경 사항 커밋 및 푸시
         env:
