--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -17,11 +17,6 @@ jobs:
       - name: 저장소 체크아웃 (코드 가져오기)
         uses: actions/checkout@v4
 
-      - name: 실행 경로 확인 (디버깅)
-        run: |
-          pwd
-          ls -al
-
       - name: Python 설정 (Python 3.9)
         uses: actions/setup-python@v4
         with:
@@ -33,7 +28,9 @@ jobs:
 
       - name: 크롤러 실행
         run: |
+          cd /home/runner/work/news-bot/news-bot
           python main_crawler.py
+
 
       - name: 변경 사항 커밋 및 푸시
         env:
