--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -2,9 +2,9 @@ name: Run Crawler Every Hour
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 매시간 정각 실행
+    - cron: '0 * * * *'  # 매시간 0분마다 실행 (예: 01:00, 02:00, 03:00 ...)
 
-  workflow_dispatch:  # 수동 실행 가능 (버튼으로 실행 가능)
+  workflow_dispatch:  # 수동 실행 가능하도록 추가
 
 jobs:
   crawl:
@@ -13,14 +13,6 @@ jobs:
     steps:
       - name: 저장소 체크아웃 (코드 가져오기)
         uses: actions/checkout@v4
-        with:
-          path: news-bot  # ✅ 저장소를 /home/runner/work/news-bot 에 다운로드하도록 설정
-
-      - name: 실행 경로 확인 (디버깅)
-        working-directory: /home/runner/work/news-bot
-        run: |
-          pwd
-          ls -al
 
       - name: Python 설정 (Python 3.9)
         uses: actions/setup-python@v4
@@ -28,12 +20,10 @@ jobs:
           python-version: '3.9'
 
       - name: 필요한 패키지 설치
-        working-directory: /home/runner/work/news-bot
         run: |
-          pip install requests requests-html beautifulsoup4 lxml urllib3 chardet
+          pip install -r requirements.txt
 
       - name: 크롤러 실행
-        working-directory: /home/runner/work/news-bot
         run: |
           python main_crawler.py
 
