--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -21,7 +21,8 @@ jobs:
 
       - name: 필요한 패키지 설치
         run: |
-          pip install -r requirements.txt
+          pip install requests requests-html beautifulsoup4 lxml urllib3 chardet
+
 
       - name: 크롤러 실행
         run: |
