--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -21,8 +21,7 @@ jobs:
 
       - name: 필요한 패키지 설치
         run: |
-          pip install requests requests-html beautifulsoup4 lxml urllib3 chardet
-
+          pip install requests requests-html beautifulsoup4 lxml urllib3 chardet lxml_html_clean
 
       - name: 크롤러 실행
         run: |
