--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -14,6 +14,7 @@ jobs:
       - name: 저장소 체크아웃 (코드 가져오기)
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Python 설정 (Python 3.9)
@@ -34,12 +35,11 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add *.json
           git status
 
       - name: 변경 사항 커밋 & 푸시
-        working-directory: /home/runner/work/news-bot
         run: |
+          git add *.json
           git commit -m "자동 크롤링 결과 업데이트 [GitHub Actions]" || echo "No changes to commit"
           git push origin main
         env:
