--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -39,5 +39,5 @@ jobs:
         run: |
           git add *.json
           git commit -m "자동 크롤링 결과 업데이트 [GitHub Actions]" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/your-github-username/your-repo-name.git
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/ric-grown/news-bot.git
           git push origin main
