--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_PAT }} 
 
       - name: Python 설정 (Python 3.9)
         uses: actions/setup-python@v4
@@ -37,7 +38,7 @@ jobs:
 
       - name: GitHub PAT을 사용한 Push
         run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/ric-grown/news-bot.git
           git add *.json
           git commit -m "자동 크롤링 결과 업데이트 [GitHub Actions]" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/ric-grown/news-bot.git
           git push origin main
