--- a/.github/workflows/blog_news_crawler.yml
+++ b/.github/workflows/blog_news_crawler.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           git config --global user.name "ric-grown"
           git config --global user.email "ric.richest@gmail.com"
+          git add images/
           git status
 
       - name: GitHub PAT을 사용한 Push
